payas-builder/src/typechecker/snapshots/payas_builder__typechecker__tests__with_array_in_operator.snap
---
source: payas-builder/src/typechecker/mod.rs
expression: build(src).unwrap()
---
values:
  - - ~
    - Primitive: Boolean
  - - ~
    - Primitive: Int
  - - ~
    - Primitive: Float
  - - ~
    - Primitive: Decimal
  - - ~
    - Primitive: String
  - - ~
    - Primitive: LocalTime
  - - ~
    - Primitive: LocalDateTime
  - - ~
    - Primitive: LocalDate
  - - ~
    - Primitive: Instant
  - - ~
    - Primitive: Json
  - - ~
    - Primitive: Blob
  - - ~
    - Primitive: Uuid
  - - ~
    - Primitive: Claytip
  - - ~
    - Primitive: ClaytipPriv
  - - ~
    - Primitive:
        Interception: Operation
  - - ~
    - Composite:
        name: AuthContext
        kind: Context
        fields:
          - name: roles
            typ:
              Plain:
                - Array
                - - Plain:
                      - String
                      - []
                      - true
                - true
            annotations:
              annotations:
                jwt:
                  name: jwt
                  params: None
            default_value: ~
        annotations:
          annotations: {}
  - - ~
    - Composite:
        name: Doc
        kind: Persistent
        fields:
          - name: content
            typ:
              Plain:
                - String
                - []
                - true
            annotations:
              annotations:
                access:
                  name: access
                  params:
                    Single:
                      - RelationalOp:
                          In:
                            - StringLiteral:
                                - ROLE_ADMIN
                            - FieldSelection:
                                Select:
                                  - Single:
                                      - - AuthContext
                                      - Reference:
                                          index: 15
                                          generation: ~
                                  - - roles
                                  - Array:
                                      Reference:
                                        index: 4
                                        generation: ~
                            - Primitive: Boolean
            default_value: ~
        annotations:
          annotations: {}
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
map:
  AuthContext:
    index: 15
    generation: ~
  Blob:
    index: 10
    generation: ~
  Boolean:
    index: 0
    generation: ~
  Claytip:
    index: 12
    generation: ~
  ClaytipPriv:
    index: 13
    generation: ~
  Decimal:
    index: 3
    generation: ~
  Doc:
    index: 16
    generation: ~
  Float:
    index: 2
    generation: ~
  Instant:
    index: 8
    generation: ~
  Int:
    index: 1
    generation: ~
  Json:
    index: 9
    generation: ~
  LocalDate:
    index: 7
    generation: ~
  LocalDateTime:
    index: 6
    generation: ~
  LocalTime:
    index: 5
    generation: ~
  Operation:
    index: 14
    generation: ~
  String:
    index: 4
    generation: ~
  Uuid:
    index: 11
    generation: ~

